--- a/index.html
+++ b/index.html
@@ -426,7 +426,11 @@
           linkedin.com/in/bonnexandre-alexis
         </a>
       </p>
-      <p><strong>GitHub:</strong> Coming soon</p>
+      <p><strong>GitHub:</strong>
+        <a href="https://github.com/bonnexandre" target="_blank">
+          github.com/bonnexandre
+        </a>
+      </p>
       <p><strong>Location:</strong> Tampa, FL — open to remote / hybrid</p>
     </div>
   </section>
