Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   ========================================== -->
   <header>
     <div class="container nav">
-      <div class="brand">Bonnexandre Alexilien ALEXIS</div>
+      <!--modification to brand link i added a link to the index.html page and made it a button with class btn -->
+    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre Alexilien ALEXIS</a></div>
 
       <nav class="navlinks" aria-label="Primary Navigation">
         <a href="#about">About</a>
@@ -566,3 +567,4 @@
 
 </body>
 </html>
+
