Update brand link to button in capstone.html
Modified the brand link to be a button that redirects to the index.html page.

--- a/capstone.html
+++ b/capstone.html
@@ -12,7 +12,9 @@
 
 <header>
   <div class="container nav">
-    <div class="brand">Bonnexandre Alexilien ALEXIS</div>
+    <!--modification to brand link i added a link to the index.html page and made it a button with class btn -->
+    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre Alexilien ALEXIS</a></div>
+    
     <nav class="navlinks">
       <a href="index.html#projects">← Back to Projects</a>
       <a href="#overview">Overview</a>
@@ -313,3 +315,4 @@
 
 </body>
 </html>
+
