--- a/virtualization.html
+++ b/virtualization.html
@@ -12,7 +12,9 @@
 
 <header>
   <div class="container nav">
-    <div class="brand">Bonnexandre Alexilien ALEXIS</div>
+    <!--modification to brand link i added a link to the index.html page and made it a button with class btn -->
+    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre Alexilien ALEXIS</a></div>
+    
     <nav class="navlinks" aria-label="Primary Navigation">
       <a href="index.html#projects">← Back</a>
       <a href="#overview">Overview</a>
@@ -195,3 +197,4 @@
 
 </body>
 </html>
+
