Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   ========================================== -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bonexandre Alexilien ALEXIS — IT & Cybersecurity</title>
+  <title>Bonexandre A. ALEXIS — IT & Cybersecurity</title>
   <meta name="description" content="IT & Cybersecurity Specialist portfolio of Bonexandre Alexilien ALEXIS." />
 
   <!-- =========================================
@@ -567,4 +567,5 @@
 
 </body>
 </html>
+
 
