Fix brand link and update HTML structure

--- a/capstone.html
+++ b/capstone.html
@@ -13,7 +13,7 @@
 <header>
   <div class="container nav">
     <!--modification to brand link i added a link to the index.html page and made it a button with class btn -->
-    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre Alexilien ALEXIS</a></div>
+    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre A. ALEXIS</a></div>
     
     <nav class="navlinks">
       <a href="index.html#projects">← Back to Projects</a>
@@ -315,4 +315,5 @@
 
 </body>
 </html>
+
 
