--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div class="container nav">
       <!--modification to brand link i added a link to the index.html page and made it a button with class btn -->
-    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre Alexilien ALEXIS</a></div>
+    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre A. ALEXIS</a></div>
 
       <nav class="navlinks" aria-label="Primary Navigation">
         <a href="#about">About</a>
@@ -567,5 +567,6 @@
 
 </body>
 </html>
+
 
 
