--- a/workstation.html
+++ b/workstation.html
@@ -13,7 +13,7 @@
 <header>
   <div class="container nav">
     <!--modification to brand link i added a link to the index.html page and made it a button with class btn -->
-    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre Alexilien ALEXIS</a></div>
+    <div class="brand"><a class="btn" class="btn" href="index.html">Bonnexandre A. ALEXIS</a></div>
     
     <nav class="navlinks" aria-label="Primary Navigation">
       <a href="index.html#projects">← Back</a>
@@ -181,4 +181,5 @@
 
 </body>
 </html>
+
 
